fixed a bug which arised on small screens

--- a/assets/css/contactUs.css
+++ b/assets/css/contactUs.css
@@ -21,14 +21,14 @@ hr {
 }
 
 .banner {
-	width: 400px;
+	width: 90%;
 	background: linear-gradient(
 			0deg,
 			rgba(50, 62, 72, 0.33),
 			rgba(50, 62, 72, 0.33)
 		),
 		rgba(0, 148, 94, 0.67);
-	margin-left: 50px;
+	margin-left: 20px;
 }
 
 .align {
@@ -65,13 +65,14 @@ span {
 
 .twitter-back {
 	opacity: 0.2;
+	width: 320px;
 }
 
 .button {
 	border: none;
 	position: absolute;
-	top: 140px;
-	left: 140px;
+	top: 80px;
+	left: 100px;
 	padding: 5px 25px;
 	color: #55acee;
 }
